crates/anvil-tui/src/surfaces/welcome/snapshots/anvil_tui__surfaces__welcome__render__tests__snapshot_status_message.snap
---
source: crates/anvil-tui/src/surfaces/welcome/render.rs
expression: "crate::test_utils::snapshot::buffer_to_string(&buf)"
---
[[fg:#D95A00,bold]‡[fg:#D95A00,bold]][fg:#D95A00,bold] a[fg:#D95A00,bold]n[fg:#D95A00,bold]v[fg:#D95A00,bold]i[fg:#D95A00,bold]l[fg:#D95A00,bold] [fg:#85858A]>[fg:#85858A] [fg:#85858A]W[fg:#EBEBEB]e[fg:#EBEBEB]l[fg:#EBEBEB]c[fg:#EBEBEB]o[fg:#EBEBEB]m[fg:#EBEBEB]e[fg:#EBEBEB]                                                             
                                                                                
    █[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]                                                           
    █[fg:#D95A00]█[fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]                                                           
    █[fg:#D95A00]█[fg:#D95A00] [fg:#D95A00] [fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00] [fg:#D95A00] [fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]                                                           
    █[fg:#D95A00]█[fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00]a[fg:#EBEBEB,bold] [fg:#EBEBEB,bold]n[fg:#EBEBEB,bold] [fg:#EBEBEB,bold]v[fg:#EBEBEB,bold] [fg:#EBEBEB,bold]i[fg:#EBEBEB,bold] [fg:#EBEBEB,bold]l[fg:#EBEBEB,bold]                                               
    █[fg:#D95A00]█[fg:#D95A00] [fg:#D95A00] [fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00] [fg:#D95A00] [fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]                                                           
    █[fg:#D95A00]█[fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]                                                           
    █[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00] [fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]█[fg:#D95A00]                                                           
                                                                                
    S[fg:#85858A]t[fg:#85858A]r[fg:#85858A]u[fg:#85858A]c[fg:#85858A]t[fg:#85858A]u[fg:#85858A]r[fg:#85858A]a[fg:#85858A]l[fg:#85858A] [fg:#85858A]g[fg:#85858A]o[fg:#85858A]v[fg:#85858A]e[fg:#85858A]r[fg:#85858A]n[fg:#85858A]a[fg:#85858A]n[fg:#85858A]c[fg:#85858A]e[fg:#85858A] [fg:#85858A]f[fg:#85858A]o[fg:#85858A]r[fg:#85858A] [fg:#85858A]A[fg:#85858A]I[fg:#85858A]-[fg:#85858A]a[fg:#85858A]s[fg:#85858A]s[fg:#85858A]i[fg:#85858A]s[fg:#85858A]t[fg:#85858A]e[fg:#85858A]d[fg:#85858A] [fg:#85858A]d[fg:#85858A]e[fg:#85858A]v[fg:#85858A]e[fg:#85858A]l[fg:#85858A]o[fg:#85858A]p[fg:#85858A]m[fg:#85858A]e[fg:#85858A]n[fg:#85858A]t[fg:#85858A]                           
    F[fg:#85858A]i[fg:#85858A]r[fg:#85858A]s[fg:#85858A]t[fg:#85858A] [fg:#85858A]r[fg:#85858A]u[fg:#85858A]n[fg:#85858A] [fg:#85858A]i[fg:#85858A]s[fg:#85858A] [fg:#85858A]d[fg:#85858A]o[fg:#85858A]n[fg:#85858A]e[fg:#85858A],[fg:#85858A] [fg:#85858A]s[fg:#85858A]o[fg:#85858A] [fg:#85858A]a[fg:#85858A]n[fg:#85858A]v[fg:#85858A]i[fg:#85858A]l[fg:#85858A] [fg:#85858A]o[fg:#85858A]p[fg:#85858A]e[fg:#85858A]n[fg:#85858A]s[fg:#85858A] [fg:#85858A]t[fg:#85858A]h[fg:#85858A]i[fg:#85858A]s[fg:#85858A] [fg:#85858A]h[fg:#85858A]u[fg:#85858A]b[fg:#85858A].[fg:#85858A] [fg:#85858A]R[fg:#85858A]e[fg:#85858A]s[fg:#85858A]t[fg:#85858A]a[fg:#85858A]r[fg:#85858A]t[fg:#85858A] [fg:#85858A]o[fg:#85858A]n[fg:#85858A]b[fg:#85858A]o[fg:#85858A]a[fg:#85858A]r[fg:#85858A]d[fg:#85858A]i[fg:#85858A]n[fg:#85858A]g[fg:#85858A] [fg:#85858A]r[fg:#85858A]e[fg:#85858A]p[fg:#85858A]l[fg:#85858A]a[fg:#85858A]y[fg:#85858A]s[fg:#85858A] [fg:#85858A]i[fg:#85858A]t[fg:#85858A].[fg:#85858A]  
                                                                                
    ▸[fg:#0D0D0F,bg:#D95A00,bold] [fg:#0D0D0F,bg:#D95A00,bold]R[fg:#0D0D0F,bg:#D95A00,bold]e[fg:#0D0D0F,bg:#D95A00,bold]v[fg:#0D0D0F,bg:#D95A00,bold]i[fg:#0D0D0F,bg:#D95A00,bold]e[fg:#0D0D0F,bg:#D95A00,bold]w[fg:#0D0D0F,bg:#D95A00,bold] [fg:#0D0D0F,bg:#D95A00,bold]g[fg:#0D0D0F,bg:#D95A00,bold]a[fg:#0D0D0F,bg:#D95A00,bold]t[fg:#0D0D0F,bg:#D95A00,bold]e[fg:#0D0D0F,bg:#D95A00,bold] [fg:#0D0D0F,bg:#D95A00,bold]d[fg:#0D0D0F,bg:#D95A00,bold]e[fg:#0D0D0F,bg:#D95A00,bold]c[fg:#0D0D0F,bg:#D95A00,bold]i[fg:#0D0D0F,bg:#D95A00,bold]s[fg:#0D0D0F,bg:#D95A00,bold]i[fg:#0D0D0F,bg:#D95A00,bold]o[fg:#0D0D0F,bg:#D95A00,bold]n[fg:#0D0D0F,bg:#D95A00,bold] [fg:#0D0D0F,bg:#D95A00,bold] [fg:#0D0D0F,bg:#D95A00,bold] [fg:#0D0D0F,bg:#D95A00,bold] [fg:#0D0D0F,bg:#D95A00,bold] [fg:#0D0D0F,bg:#D95A00,bold] [fg:#0D0D0F,bg:#D95A00,bold]S[fg:#0D0D0F,bg:#D95A00]e[fg:#0D0D0F,bg:#D95A00]e[fg:#0D0D0F,bg:#D95A00] [fg:#0D0D0F,bg:#D95A00]w[fg:#0D0D0F,bg:#D95A00]h[fg:#0D0D0F,bg:#D95A00]e[fg:#0D0D0F,bg:#D95A00]t[fg:#0D0D0F,bg:#D95A00]h[fg:#0D0D0F,bg:#D95A00]e[fg:#0D0D0F,bg:#D95A00]r[fg:#0D0D0F,bg:#D95A00] [fg:#0D0D0F,bg:#D95A00]t[fg:#0D0D0F,bg:#D95A00]h[fg:#0D0D0F,bg:#D95A00]e[fg:#0D0D0F,bg:#D95A00] [fg:#0D0D0F,bg:#D95A00]c[fg:#0D0D0F,bg:#D95A00]u[fg:#0D0D0F,bg:#D95A00]r[fg:#0D0D0F,bg:#D95A00]r[fg:#0D0D0F,bg:#D95A00]e[fg:#0D0D0F,bg:#D95A00]n[fg:#0D0D0F,bg:#D95A00]t[fg:#0D0D0F,bg:#D95A00] [fg:#0D0D0F,bg:#D95A00]f[fg:#0D0D0F,bg:#D95A00]i[fg:#0D0D0F,bg:#D95A00]n[fg:#0D0D0F,bg:#D95A00]d[fg:#0D0D0F,bg:#D95A00]i[fg:#0D0D0F,bg:#D95A00]n[fg:#0D0D0F,bg:#D95A00]g[fg:#0D0D0F,bg:#D95A00]s[fg:#0D0D0F,bg:#D95A00] [fg:#0D0D0F,bg:#D95A00]p[fg:#0D0D0F,bg:#D95A00]a[fg:#0D0D0F,bg:#D95A00]s[fg:#0D0D0F,bg:#D95A00]s[fg:#0D0D0F,bg:#D95A00] [fg:#0D0D0F,bg:#D95A00]y[fg:#0D0D0F,bg:#D95A00]o[fg:#0D0D0F,bg:#D95A00]u[fg:#0D0D0F,bg:#D95A00]r[fg:#0D0D0F,bg:#D95A00] [fg:#0D0D0F,bg:#D95A00]w[fg:#0D0D0F,bg:#D95A00]o[fg:#0D0D0F,bg:#D95A00]r[fg:#0D0D0F,bg:#D95A00]k[fg:#0D0D0F,bg:#D95A00]f[fg:#0D0D0F,bg:#D95A00]
     [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]W[fg:#EBEBEB,bg:#0D0D0F]a[fg:#EBEBEB,bg:#0D0D0F]t[fg:#EBEBEB,bg:#0D0D0F]c[fg:#EBEBEB,bg:#0D0D0F]h[fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]c[fg:#EBEBEB,bg:#0D0D0F]h[fg:#EBEBEB,bg:#0D0D0F]e[fg:#EBEBEB,bg:#0D0D0F]c[fg:#EBEBEB,bg:#0D0D0F]k[fg:#EBEBEB,bg:#0D0D0F]s[fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]l[fg:#EBEBEB,bg:#0D0D0F]i[fg:#EBEBEB,bg:#0D0D0F]v[fg:#EBEBEB,bg:#0D0D0F]e[fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]R[fg:#85858A,bg:#0D0D0F]u[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]c[fg:#85858A,bg:#0D0D0F]h[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]c[fg:#85858A,bg:#0D0D0F]k[fg:#85858A,bg:#0D0D0F]s[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]c[fg:#85858A,bg:#0D0D0F]o[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]t[fg:#85858A,bg:#0D0D0F]i[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]u[fg:#85858A,bg:#0D0D0F]o[fg:#85858A,bg:#0D0D0F]u[fg:#85858A,bg:#0D0D0F]s[fg:#85858A,bg:#0D0D0F]l[fg:#85858A,bg:#0D0D0F]y[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]a[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]d[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]w[fg:#85858A,bg:#0D0D0F]a[fg:#85858A,bg:#0D0D0F]t[fg:#85858A,bg:#0D0D0F]c[fg:#85858A,bg:#0D0D0F]h[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]f[fg:#85858A,bg:#0D0D0F]i[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]d[fg:#85858A,bg:#0D0D0F]i[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]g[fg:#85858A,bg:#0D0D0F]s[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]u[fg:#85858A,bg:#0D0D0F]p[fg:#85858A,bg:#0D0D0F]d[fg:#85858A,bg:#0D0D0F]a[fg:#85858A,bg:#0D0D0F]t[fg:#85858A,bg:#0D0D0F]
     [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]E[fg:#EBEBEB,bg:#0D0D0F]x[fg:#EBEBEB,bg:#0D0D0F]p[fg:#EBEBEB,bg:#0D0D0F]l[fg:#EBEBEB,bg:#0D0D0F]o[fg:#EBEBEB,bg:#0D0D0F]r[fg:#EBEBEB,bg:#0D0D0F]e[fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]p[fg:#EBEBEB,bg:#0D0D0F]r[fg:#EBEBEB,bg:#0D0D0F]o[fg:#EBEBEB,bg:#0D0D0F]j[fg:#EBEBEB,bg:#0D0D0F]e[fg:#EBEBEB,bg:#0D0D0F]c[fg:#EBEBEB,bg:#0D0D0F]t[fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]f[fg:#EBEBEB,bg:#0D0D0F]i[fg:#EBEBEB,bg:#0D0D0F]n[fg:#EBEBEB,bg:#0D0D0F]d[fg:#EBEBEB,bg:#0D0D0F]i[fg:#EBEBEB,bg:#0D0D0F]n[fg:#EBEBEB,bg:#0D0D0F]g[fg:#EBEBEB,bg:#0D0D0F]s[fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]I[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]s[fg:#85858A,bg:#0D0D0F]p[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]c[fg:#85858A,bg:#0D0D0F]t[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]t[fg:#85858A,bg:#0D0D0F]h[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]f[fg:#85858A,bg:#0D0D0F]i[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]d[fg:#85858A,bg:#0D0D0F]i[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]g[fg:#85858A,bg:#0D0D0F]s[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]a[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]v[fg:#85858A,bg:#0D0D0F]i[fg:#85858A,bg:#0D0D0F]l[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]c[fg:#85858A,bg:#0D0D0F]o[fg:#85858A,bg:#0D0D0F]l[fg:#85858A,bg:#0D0D0F]l[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]c[fg:#85858A,bg:#0D0D0F]t[fg:#85858A,bg:#0D0D0F]s[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]a[fg:#85858A,bg:#0D0D0F]c[fg:#85858A,bg:#0D0D0F]r[fg:#85858A,bg:#0D0D0F]o[fg:#85858A,bg:#0D0D0F]s[fg:#85858A,bg:#0D0D0F]s[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]y[fg:#85858A,bg:#0D0D0F]o[fg:#85858A,bg:#0D0D0F]u[fg:#85858A,bg:#0D0D0F]r[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]
     [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]C[fg:#EBEBEB,bg:#0D0D0F]h[fg:#EBEBEB,bg:#0D0D0F]e[fg:#EBEBEB,bg:#0D0D0F]c[fg:#EBEBEB,bg:#0D0D0F]k[fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]s[fg:#EBEBEB,bg:#0D0D0F]e[fg:#EBEBEB,bg:#0D0D0F]t[fg:#EBEBEB,bg:#0D0D0F]u[fg:#EBEBEB,bg:#0D0D0F]p[fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]h[fg:#EBEBEB,bg:#0D0D0F]e[fg:#EBEBEB,bg:#0D0D0F]a[fg:#EBEBEB,bg:#0D0D0F]l[fg:#EBEBEB,bg:#0D0D0F]t[fg:#EBEBEB,bg:#0D0D0F]h[fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]V[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]r[fg:#85858A,bg:#0D0D0F]i[fg:#85858A,bg:#0D0D0F]f[fg:#85858A,bg:#0D0D0F]y[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]y[fg:#85858A,bg:#0D0D0F]o[fg:#85858A,bg:#0D0D0F]u[fg:#85858A,bg:#0D0D0F]r[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]v[fg:#85858A,bg:#0D0D0F]i[fg:#85858A,bg:#0D0D0F]r[fg:#85858A,bg:#0D0D0F]o[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]m[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]t[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]b[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]f[fg:#85858A,bg:#0D0D0F]o[fg:#85858A,bg:#0D0D0F]r[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]r[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]l[fg:#85858A,bg:#0D0D0F]y[fg:#85858A,bg:#0D0D0F]i[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]g[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]o[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]c[fg:#85858A,bg:#0D0D0F]h[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]c[fg:#85858A,bg:#0D0D0F]k[fg:#85858A,bg:#0D0D0F]s[fg:#85858A,bg:#0D0D0F]
     [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]C[fg:#EBEBEB,bg:#0D0D0F]h[fg:#EBEBEB,bg:#0D0D0F]o[fg:#EBEBEB,bg:#0D0D0F]o[fg:#EBEBEB,bg:#0D0D0F]s[fg:#EBEBEB,bg:#0D0D0F]e[fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]a[fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]l[fg:#EBEBEB,bg:#0D0D0F]e[fg:#EBEBEB,bg:#0D0D0F]a[fg:#EBEBEB,bg:#0D0D0F]r[fg:#EBEBEB,bg:#0D0D0F]n[fg:#EBEBEB,bg:#0D0D0F]i[fg:#EBEBEB,bg:#0D0D0F]n[fg:#EBEBEB,bg:#0D0D0F]g[fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]p[fg:#EBEBEB,bg:#0D0D0F]a[fg:#EBEBEB,bg:#0D0D0F]t[fg:#EBEBEB,bg:#0D0D0F]h[fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]W[fg:#85858A,bg:#0D0D0F]a[fg:#85858A,bg:#0D0D0F]l[fg:#85858A,bg:#0D0D0F]k[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]t[fg:#85858A,bg:#0D0D0F]h[fg:#85858A,bg:#0D0D0F]r[fg:#85858A,bg:#0D0D0F]o[fg:#85858A,bg:#0D0D0F]u[fg:#85858A,bg:#0D0D0F]g[fg:#85858A,bg:#0D0D0F]h[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]c[fg:#85858A,bg:#0D0D0F]h[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]c[fg:#85858A,bg:#0D0D0F]k[fg:#85858A,bg:#0D0D0F]s[fg:#85858A,bg:#0D0D0F],[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]f[fg:#85858A,bg:#0D0D0F]i[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]d[fg:#85858A,bg:#0D0D0F]i[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]g[fg:#85858A,bg:#0D0D0F]s[fg:#85858A,bg:#0D0D0F],[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]a[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]d[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]t[fg:#85858A,bg:#0D0D0F]h[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]g[fg:#85858A,bg:#0D0D0F]a[fg:#85858A,bg:#0D0D0F]t[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]     
     [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]V[fg:#EBEBEB,bg:#0D0D0F]i[fg:#EBEBEB,bg:#0D0D0F]e[fg:#EBEBEB,bg:#0D0D0F]w[fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]d[fg:#EBEBEB,bg:#0D0D0F]o[fg:#EBEBEB,bg:#0D0D0F]c[fg:#EBEBEB,bg:#0D0D0F]u[fg:#EBEBEB,bg:#0D0D0F]m[fg:#EBEBEB,bg:#0D0D0F]e[fg:#EBEBEB,bg:#0D0D0F]n[fg:#EBEBEB,bg:#0D0D0F]t[fg:#EBEBEB,bg:#0D0D0F]a[fg:#EBEBEB,bg:#0D0D0F]t[fg:#EBEBEB,bg:#0D0D0F]i[fg:#EBEBEB,bg:#0D0D0F]o[fg:#EBEBEB,bg:#0D0D0F]n[fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]O[fg:#85858A,bg:#0D0D0F]p[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]t[fg:#85858A,bg:#0D0D0F]h[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]a[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]v[fg:#85858A,bg:#0D0D0F]i[fg:#85858A,bg:#0D0D0F]l[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]d[fg:#85858A,bg:#0D0D0F]o[fg:#85858A,bg:#0D0D0F]c[fg:#85858A,bg:#0D0D0F]u[fg:#85858A,bg:#0D0D0F]m[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]t[fg:#85858A,bg:#0D0D0F]a[fg:#85858A,bg:#0D0D0F]t[fg:#85858A,bg:#0D0D0F]i[fg:#85858A,bg:#0D0D0F]o[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]i[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]y[fg:#85858A,bg:#0D0D0F]o[fg:#85858A,bg:#0D0D0F]u[fg:#85858A,bg:#0D0D0F]r[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]b[fg:#85858A,bg:#0D0D0F]r[fg:#85858A,bg:#0D0D0F]o[fg:#85858A,bg:#0D0D0F]w[fg:#85858A,bg:#0D0D0F]s[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]r[fg:#85858A,bg:#0D0D0F]    
     [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]R[fg:#EBEBEB,bg:#0D0D0F]e[fg:#EBEBEB,bg:#0D0D0F]s[fg:#EBEBEB,bg:#0D0D0F]t[fg:#EBEBEB,bg:#0D0D0F]a[fg:#EBEBEB,bg:#0D0D0F]r[fg:#EBEBEB,bg:#0D0D0F]t[fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]o[fg:#EBEBEB,bg:#0D0D0F]n[fg:#EBEBEB,bg:#0D0D0F]b[fg:#EBEBEB,bg:#0D0D0F]o[fg:#EBEBEB,bg:#0D0D0F]a[fg:#EBEBEB,bg:#0D0D0F]r[fg:#EBEBEB,bg:#0D0D0F]d[fg:#EBEBEB,bg:#0D0D0F]i[fg:#EBEBEB,bg:#0D0D0F]n[fg:#EBEBEB,bg:#0D0D0F]g[fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F] [fg:#EBEBEB,bg:#0D0D0F]R[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]s[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]t[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]a[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]d[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]r[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]-[fg:#85858A,bg:#0D0D0F]r[fg:#85858A,bg:#0D0D0F]u[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]t[fg:#85858A,bg:#0D0D0F]h[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]f[fg:#85858A,bg:#0D0D0F]i[fg:#85858A,bg:#0D0D0F]r[fg:#85858A,bg:#0D0D0F]s[fg:#85858A,bg:#0D0D0F]t[fg:#85858A,bg:#0D0D0F]-[fg:#85858A,bg:#0D0D0F]t[fg:#85858A,bg:#0D0D0F]i[fg:#85858A,bg:#0D0D0F]m[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]s[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]t[fg:#85858A,bg:#0D0D0F]u[fg:#85858A,bg:#0D0D0F]p[fg:#85858A,bg:#0D0D0F] [fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]x[fg:#85858A,bg:#0D0D0F]p[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]r[fg:#85858A,bg:#0D0D0F]i[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]n[fg:#85858A,bg:#0D0D0F]c[fg:#85858A,bg:#0D0D0F]e[fg:#85858A,bg:#0D0D0F]
                                                                                
                                                                                
    R[fg:#85858A]e[fg:#85858A]a[fg:#85858A]d[fg:#85858A]y[fg:#85858A].[fg:#85858A]                                                                      
j[fg:#85858A]/[fg:#85858A]k[fg:#85858A] [fg:#85858A]n[fg:#85858A]a[fg:#85858A]v[fg:#85858A]i[fg:#85858A]g[fg:#85858A]a[fg:#85858A]t[fg:#85858A]e[fg:#85858A] [fg:#85858A] [fg:#85858A]e[fg:#85858A]n[fg:#85858A]t[fg:#85858A]e[fg:#85858A]r[fg:#85858A] [fg:#85858A]s[fg:#85858A]e[fg:#85858A]l[fg:#85858A]e[fg:#85858A]c[fg:#85858A]t[fg:#85858A] [fg:#85858A] [fg:#85858A]e[fg:#85858A]s[fg:#85858A]c[fg:#85858A]/[fg:#85858A]q[fg:#85858A] [fg:#85858A]q[fg:#85858A]u[fg:#85858A]i[fg:#85858A]t[fg:#85858A]                     [[fg:#85858A]‡[fg:#85858A]][fg:#85858A] [fg:#85858A]a[fg:#85858A] [fg:#85858A]n[fg:#85858A] [fg:#85858A]v[fg:#85858A] [fg:#85858A]i[fg:#85858A] [fg:#85858A]l[fg:#85858A] [fg:#85858A] [fg:#85858A]v[fg:#85858A]X[fg:#85858A].[fg:#85858A]Y[fg:#85858A].[fg:#85858A]Z[fg:#85858A]
